public class Chicken extends Bird {
    public Chicken(char Gender, int Age, int WeightInPounds)
    {
        super(Gender, Age, WeightInPounds);
    }
}
