public class Fish extends Animal {
    public Fish(char Gender, int Age, int Weight)
    {
        super(Gender, Age, Weight);
    }

    public void swim()
    {
        System.out.println("I am swimming...");
    }
}
