@startuml
skinparam classAttributeIconSize 0

class Animal
{
    - gender : char
    - age : int
    - weightInPounds : int
    + eat()
    + sleep()
}

class Zoo
{

}


class Bird
{
    + Fly()
}

class Fish
{
    + Swim()
}


class Chicken
{
    + fly()
}

class Sparrow
{

}

interface flyable
{
    +fly()
}


Zoo -- "1..*" Animal : Lives in <
(Bird, Fish) --|> Animal
(Chicken, Sparrow) --|> Bird
(Chicken, Sparrow) ..|> flyable
@enduml